feat:astro_homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Footer from "../components/Footer";
 	<ChooseUs client:load />
 	<Testimonials client:load />
 	<Faq client:load />
-	<Download client:load />
+	<!-- <Download client:load /> -->
 	<Footer client:load />
   </main>
 </Layout>
