feat:contact us

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import Box3 from "../images/about/icon3.png";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="about pageƒ.">
   <section class="about-page">
     <HeroPages name="About" />
     <div class="container">
