--- a/src/styles/NavbarStyles/_navbar.scss
+++ b/src/styles/NavbarStyles/_navbar.scss
@@ -1,5 +1,13 @@
 @use "../global/" as *;
+.mobile_menu{
+  display: none;
+}
 
+@media (max-width:768px) {
+  .mobile_menu{
+    display: block;
+  }
+}
 .navbar {
   max-width: 133rem;
   width: 100%;
