--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ import '../styles/styles.css'
 		<title>{title}</title>
 	</head>
 	<body>
-		<Navbar />
+		<Navbar client:load />
 		<slot />
 	</body>
 </html>
