--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,7 +8,7 @@ import HeroPages from "../components/HeroPages";
 <Layout title="contact us ">
 
     <section class="contact-page">
-        <HeroPages name="Contact" />
+        <HeroPages name="Contact" client:load />
         <div class="container">
           <div class="contact-div">
             <div class="contact-div__text">
@@ -67,6 +67,6 @@ import HeroPages from "../components/HeroPages";
             </div>
           </div>
         </div>
-        <Footer />
+        <Footer client:load />
       </section>
 </Layout>
