--- a/src/pages/models.astro
+++ b/src/pages/models.astro
@@ -13,7 +13,7 @@ import CarImg6 from "../images/cars-big/passat-box.png";
 
 <Layout title="models">
     <section class="models-section">
-        <HeroPages name="Vehicle Models" />
+        <HeroPages name="Vehicle Models" client:load />
         <div class="container">
           <div class="models-div">
             <div class="models-div__box">
@@ -287,6 +287,6 @@ import CarImg6 from "../images/cars-big/passat-box.png";
             </div>
           </div>
         </div>
-        <Footer />
+        <Footer client:load/>
       </section>
 </Layout>
