--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Hero from "../components/Hero";
 import BookCar from "../components/BookCar";
 import PlanTrip from "../components/PlanTrip";
 import PickCar from "../components/PickCar";
-import Banner from "../components/Banner";
+import Banner from "../components/Banner.astro";
 import ChooseUs from "../components/ChooseUs";
 import Testimonials from "../components/Testimonials";
 import Faq from "../components/Faq";
@@ -19,7 +19,7 @@ import Footer from "../components/Footer";
     <BookCar client:load />
 	<PlanTrip client:load />
 	<PickCar client:load />
-	<Banner client:load />
+	<Banner  />
 	<ChooseUs client:load />
 	<Testimonials client:load />
 	<Faq client:load />
